Refresh congestion multipliers in config callback (#7780)
Signed-off-by: Michael Tinker <michael.tinker@swirldslabs.com>